docs-site/src/pages/pattern-lab/_patterns/50-pages/99999-bolt-dev-sandbox/styles/index.scss
/**
 * Add imports here
 */
@import '@bolt/core-v3.x';

.c-quick-links {
  padding-top: var(--bolt-spacing-y-medium);
  background-color: var(--m-bolt-bg);

  @include bolt-mq($from: medium) {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-column-gap: var(--bolt-spacing-x-medium);
  }
}

.c-quick-links__col {
  padding-bottom: var(--bolt-spacing-y-medium);
  border: 1px solid var(--m-bolt-border);
  border-radius: bolt-border-radius(small);

  &:first-of-type {
    margin-bottom: var(--bolt-spacing-y-medium);

    @include bolt-mq($from: medium) {
      margin-bottom: 0;
    }
  }
}

.c-quick-links__col-title {
  padding: var(--bolt-spacing-y-medium) var(--bolt-spacing-x-medium);
  border-bottom: 1px solid var(--m-bolt-border);
}

.c-quick-links__skip-button {
  position: absolute;
  transform: translateY(-100%);
  z-index: -1;

  &:focus {
    position: relative;
    transform: translateY(0);
    z-index: 999;
  }
}

.c-quick-links__col-inner {
  height: 25vh;
  overflow: auto;
  padding: var(--bolt-spacing-y-medium) var(--bolt-spacing-x-medium);

  @include bolt-mq($from: medium) {
    height: 40vh;
  }

  .e-bolt-text-link {
    display: inline-flex; //If the link is very long prevent from wrapping around icon
  }
}

